feat: add findAllByEvent method and route to Ticket module
