# dist/docs/swagger-output.json
@@ -1199,6 +1199,29 @@
                     }
                 ]
             }
+        },
+        "/ticket/{id}/event": {
+            "get": {
+                "tags": [
+                    "Ticket"
+                ],
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": ""
+                    }
+                }
+            }
         }
     },
     "components": {
